--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,1 @@
-file.reference.postgresql-42.7.3.jar=C:\\Users\\unifewatanabe\\Downloads\\postgresql-42.7.3.jar
-user.properties.file=C:\\Users\\unifewatanabe\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=C:\\Users\\T-Gamer\\AppData\\Roaming\\NetBeans\\21\\build.properties
